src/objects/tmTrialFeatureRequestItem__c.object
<CustomObject>
    <description>This object contains list of products and qtys that will be provisioned to a trial</description>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Trial Feature Request Items</relationshipLabel>
        <relationshipName>TrialFeatureRequestItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RequestedQuantity__c</fullName>
        <label>Requested Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TrialFeatureRequest__c</fullName>
        <label>Trial Feature Request</label>
        <referenceTo>tmTrialFeatureRequest__c</referenceTo>
        <relationshipLabel>Trial Feature Request Items</relationshipLabel>
        <relationshipName>TrialFeatureRequestItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ProvisionedQuantity__c</fullName>
        <label>Provisioned Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsCoreLicense__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Core License</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RequiresApproval__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Requires Approval</label>
        <type>Checkbox</type>
    </fields>    
    <label>Trial Feature Request Items</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Item Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trial Feature Request Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>